--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,8 @@
 
   <body>
     <div id="main">
-      {{ content }}
+      {{ content }} <!-- entire page content is loaded here-->
     </div>
-
-    <p>cranberry test</p>
   </body>
 
 </html>
