--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     <div id="main">
-      {{ content }} <!-- entire page content is loaded here-->
+      {{ content }}
     </div>
   </body>
 
