--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,6 @@
 layout: default
 ---
 <p>{{ page.date | date: "%-d %B %Y" }}</p>
+<a href="post.url">{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</a>
 
 {{ content }}
