--- a/css/main.css
+++ b/css/main.css
@@ -44,15 +44,69 @@ table {
 	border-spacing: 0;
 }
 
-/*end reset*/
+/*---------------------------end reset------------------------*/
 
 
 body{
-	background-color: beige;
+	font-family: Tahoma, sans-serif;
+	letter-spacing: 0.02em;
+	line-height: 1.5em;
+	font-size: 1em;
+	color: #292929;
 }
+
+h1{
+	font-size: 4.209em;
+}
+
+h2{
+	font-size: 3.157em;
+}
+
+h3{
+	font-size: 2.369em;
+}
+
+h4{
+	font-size: 1.777em;
+}
+
+h5{
+	font-size: 1.333em;
+}
+
+p{
+	padding: 0.75em 0;
+}
+
+small, .text_small {font-size: 0.75em;}
+
+
 
 .center-col{
 	max-width: 800px;
 	background-color: blue;
 	margin: auto;
+}
+
+.flex-all{
+	display: flex;
+	flex-direction: column;
+}
+
+.nav{
+	display: flex;
+	justify-content:space-between;
+	height: 60px;
+	width: 100vw;
+}
+
+.flex-left{
+	display: flex;
+	justify-content: flex-start;
+}
+
+.flex-right{
+	display: flex;
+	justify-content: flex-end;
 }
