--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@ title: "none"
 <p>{{ page.date | date: "%-d %B %Y" }}</p>
 </div>
 
-<div class="center-col">
-	<div class="flex-all">
+<div class="post-body">
+	<div class="center-col flex-all">
 		{{ content }}
 	</div>
 </div>	
