--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <div class="navbar">
 	<div class="flex-left">
-		<a href="">Winter Solace</a>
+		<a href="" style="padding-left: 0">Winter Solace</a>
 	</div>
 	<div class="flex-right">
 		<a href="/blog">blog</a>
 		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<a href="">twitter</a>
-		<a href="">discord</a>
+		<a href="" style="padding-right: 0">discord</a>
 	</div>
 </div>
