--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ p{
 small, .text_small {font-size: 0.75em;}
 
 .center-col{
-	max-width: 800px;
+	max-width: 660px;
 	margin: auto;
 }
 
@@ -96,7 +96,6 @@ small, .text_small {font-size: 0.75em;}
 	justify-content:space-between;
 	align-items: center;
 	height: 60px;
-	max-width: 800px;
 	margin:auto;
 }
 
@@ -118,7 +117,18 @@ small, .text_small {font-size: 0.75em;}
 	text-align: justify;
 }
 
-@media(max-width: 800px){
+.post-head-image{
+	width: 100%;
+	height: 100px;
+	overflow: hidden;
+}
+
+.post-head img{
+	width: 100%;
+	height: auto;
+}
+
+@media(max-width: 660px){
 	.center-col{
 		padding: 0 20px;
 	}
