--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar center-col">
 	<div class="flex-left">
-		<a href="" style="padding-left: 0">Winter Solace</a>
+		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
 	</div>
 	<div class="flex-right">
 		<a href="/blog">blog</a>
