--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ small, .text_small {font-size: 0.75em;}
 	overflow: hidden;
 }
 
-.post-head-image img{
+.post-head-image{
 	width: 100%;
 	height: 68%;
 	background-position: center;
@@ -162,7 +162,7 @@ small, .text_small {font-size: 0.75em;}
 	flex: 0 0 252px;
 }
 
-.content-preveiw{
+.content-preview{
 	display: flex;
 	flex-direction: column;
 	padding-left: 10px;
