--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ a:visited{
 
 .image-preview{
 	/*width: 252px;*/
-	/*height: 155px;*/
+	height: 155px;
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
