--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,10 +3,34 @@
 		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
 	</div>
 	<div class="flex-right">
+		<div class="hamburger-icon" onclick="hamburgerSwap(this)">
+			 	<div class="bar1"></div>
+ 				<div class="bar2"></div>
+  				<div class="bar3"></div>
+		</div>
 		<a href="/blog">blog</a>
 		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<a href="">twitter</a>
 		<a href="" style="padding-right: 0">discord</a>
 	</div>
+
+	<div id="mobile-nav">
+		<p>lalalalala</p>
+	</div>
+
 </div>
+
+<script type="text/javascript">
+	function hamburgerSwap(x) {
+		x.classList.toggle("change");
+		
+		var y = document.getElementById("mobile-nav");
+		if(y.style.top === 0){
+			y.style.top = 50;
+		}else{
+			y.style.top = 0
+		}
+	}
+
+</script>
