--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ a:visited{
 	display: flex;
  	flex-direction:column;
  	cursor: pointer;
+ 	z-index: 10;
 }
 
 .bar1, .bar2, .bar3 {
@@ -226,6 +227,10 @@ a:visited{
 	top: 50px;
 	height: 50px;
 	background-color: yellow;
+}
+
+.offscreen{
+	top:50 !important;
 }
 
 @media(max-width: 660px){
