--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,8 +15,14 @@
 		<a href="" style="padding-right: 0">discord</a>
 	</div>
 
-	<div id="mobile-nav">
-		<p>lalalalala</p>
+	<div class="center-col" id="mobile-nav">
+		<a href="/blog">blog</a>
+		<a href="/presskit">presskit()</a>
+		<a href="/contact">contact</a>
+		<div class="social-images">
+			<a href="">twitter</a>
+			<a href="" style="padding-right: 0">discord</a>
+		</div>
 	</div>
 
 </div>
@@ -29,7 +35,6 @@
 	function openNav() {
 		var x = document.getElementById("mobile-nav");
 		x.classList.toggle("offscreen");
-
 	}
 
 </script>
