--- a/css/main.css
+++ b/css/main.css
@@ -202,11 +202,11 @@ a:visited{
 }
 
 .bar1, .bar2, .bar3 {
-  width: 35px;
+  width: 30px;
   height: 3px;
-  background-color: #333;
+  background-color: #d83f41;
   margin: 4px 0;
-  transition: 0.4s;
+  transition: 0.2s;
 }
 
 .change .bar1 {
@@ -222,15 +222,23 @@ a:visited{
 }
 
 #mobile-nav{
-	width: 100%;
 	position: absolute;
 	top: 100px;
 	height: 50px;
 	background-color: yellow;
+	display: flex;
+	flex-direction: column;
+	transition: 0.5s;
 }
 
 .offscreen{
-	top:50px !important;
+	top: 50px !important;
+}
+
+.social-images{
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 @media(max-width: 660px){
