--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,14 +15,19 @@
 		<a href="" style="padding-right: 0">discord</a>
 	</div>
 
-	<div class="center-col" id="mobile-nav">
+	<div id="mobile-nav">
+		<a href="https://wintersolacegame.com">Home</a>
 		<a href="/blog">blog</a>
 		<a href="/presskit">presskit()</a>
 		<a href="/contact">contact</a>
 		<div class="social-images">
 			<a href="">twitter</a>
-			<a href="" style="padding-right: 0">discord</a>
+			<a href="">discord</a>
 		</div>
+	</div>
+
+	<div id="mobile-nav-shade">
+		
 	</div>
 
 </div>
@@ -34,7 +39,9 @@
 
 	function openNav() {
 		var x = document.getElementById("mobile-nav");
-		x.classList.toggle("offscreen");
+		x.classList.toggle("onscreen");
+	var x = document.getElementById("mobile-nav-shade");
+		x.classList.toggle("visible");
 	}
 
 </script>
