--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ a:visited{
 .bar1, .bar2, .bar3 {
   width: 30px;
   height: 3px;
-  background-color: #d83f41;
+  background-color: #9d3259;
   margin: 4px 0;
   transition: 0.2s;
 }
@@ -223,16 +223,35 @@ a:visited{
 
 #mobile-nav{
 	position: absolute;
-	top: 100px;
-	height: 50px;
-	background-color: yellow;
+	top: -12em;
+	left: 0px;
+	/*height: 100%*/
+	width: 100%;
+	background-color: white;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	transition: 0.5s;
 }
 
-.offscreen{
-	top: 50px !important;
+#mobile-nav-shade{
+	background-color: transparent;
+	position: absolute;
+	left: 0;
+	top: 0;
+	transition: 0.5s;
+}
+
+#mobile-nav a{
+	padding: 1em;
+}
+
+.onscreen{
+	top: 0px !important;
+}
+
+.visible{
+	background-color: blue
 }
 
 .social-images{
