--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,7 @@ a:visited{
 
 #mobile-nav{
 	position: absolute;
-	top: -12em;
+	top: -18em;
 	left: 0px;
 	/*height: 100%*/
 	width: 100%;
@@ -232,6 +232,7 @@ a:visited{
 	flex-direction: column;
 	align-items: center;
 	transition: 0.5s;
+	z-index: 5;
 }
 
 #mobile-nav-shade{
@@ -239,6 +240,8 @@ a:visited{
 	position: absolute;
 	left: 0;
 	top: 0;
+	width: 100%;
+	height: 100%;
 	transition: 0.5s;
 }
 
@@ -251,7 +254,7 @@ a:visited{
 }
 
 .visible{
-	background-color: blue
+	background-color: blue !important;
 }
 
 .social-images{
