--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar center-col">
 	<div class="flex-left">
-		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
+		<a href="https://wintersolacegame.com" style="padding-left: 0; z-index: 10">Winter Solace</a>
 	</div>
 	<div class="flex-right">
 		<div class="hamburger-icon" onclick="hamburgerSwap(this);openNav()">
