--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,7 @@ a:visited{
 	width: 100%;
 	height: 100%;
 	transition: 0.5s;
+	z-index: 2;
 }
 
 #mobile-nav a{
@@ -254,7 +255,7 @@ a:visited{
 }
 
 .visible{
-	background-color: blue !important;
+	background-color: #00000042 !important;
 }
 
 .social-images{
