--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 	<div class="flex-left">
 		<a href="https://wintersolacegame.com" style="padding-left: 0; z-index: 10">Winter Solace</a>
 	</div>
-	<div class="flex-right">
+	<div class="flex-right no-mobile">
 		<div class="hamburger-icon" onclick="hamburgerSwap(this);openNav()">
 			 	<div class="bar1"></div>
  				<div class="bar2"></div>
