--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ a:visited{
 }
 
 .hamburger-icon{
-	display: flex;
+	display: none;
  	flex-direction:column;
  	cursor: pointer;
  	z-index: 10;
@@ -250,6 +250,7 @@ a:visited{
 	padding: 1em;
 }
 
+
 .onscreen{
 	top: 0px !important;
 }
@@ -291,5 +292,9 @@ a:visited{
 		padding: 1em 0 0.5em 0;
 	}
 
-	/*do a stupid hamburger*/
+
+	.no-mobile a{
+		
+	}
+
 }
