--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="navbar center-col">
 	<div class="flex-left">
-		<a href="https://wintersolacegame.com" style="padding-left: 0; z-index: 10">Winter Solace</a>
+		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
 	</div>
 	<div class="flex-right no-mobile">
 		<div class="hamburger-icon" onclick="hamburgerSwap(this);openNav()">
@@ -26,8 +26,7 @@
 		</div>
 	</div>
 
-	<div id="mobile-nav-shade">
-		
+	<div id="mobile-nav-shade"  onclick="hamburgerSwap(this);openNav()">
 	</div>
 
 </div>
