--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ title: "none"
 					<a href="{{page.previous.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
 					<small>{{ post.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
-						<p>{{ post.content | strip_html | truncate: 180 }}</p>
+						<p>{{ page.next.content | strip_html | truncate: 180 }}</p>
 						<a class="triangle-link" href="{{page.previous.url}}">►►►</a>
 					</div>
 				</div>
@@ -61,7 +61,7 @@ title: "none"
 					<a href="{{page.next.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
 					<small>{{ post.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
-						<p>{{ post.content | strip_html | truncate: 180 }}</p>
+						<p>{{ page.next.content | strip_html | truncate: 180 }}</p>
 						<a class="triangle-link" href="{{page.next.url}}">►►►</a>
 					</div>
 				</div>
