--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,10 +33,10 @@ title: "none"
 				</div>
 
 				<div class="content-preview">
-					<a href="{{page.previous.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
-					<small>{{ post.date | date: "%-d %B %Y" }}</small>
+					<a href="{{page.previous.url}}"><h5>{{page.previous.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
+					<small>{{ page.previous.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
-						<p>{{ page.next.content | strip_html | truncate: 180 }}</p>
+						<p>{{ page.previous.content | strip_html | truncate: 180 }}</p>
 						<a class="triangle-link" href="{{page.previous.url}}">►►►</a>
 					</div>
 				</div>
@@ -58,8 +58,8 @@ title: "none"
 				</div>
 
 				<div class="content-preview">
-					<a href="{{page.next.url}}"><h5>{{post.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
-					<small>{{ post.date | date: "%-d %B %Y" }}</small>
+					<a href="{{page.next.url}}"><h5>{{page.next.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
+					<small>{{ page.next.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
 						<p>{{ page.next.content | strip_html | truncate: 180 }}</p>
 						<a class="triangle-link" href="{{page.next.url}}">►►►</a>
