--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,9 @@ title: "none"
 
 <div class="post-body">
 	<div class="center-col flex-all">
+		<div class="post-text">
 		{{ content }}
-
+		</div>
 
 
 		<div class="subscription-box">
@@ -28,12 +29,12 @@ title: "none"
 			    {% if page.previous.url %}
 			   
 			<div class="post-preview" style="flex-direction: column;">
-				<p> Previous Post</p>
+				<a href="{{page.previous.url}}"><h5> Previous Post</h5></a>
 				<div class="image-preview" style="background-image: url('/images/{{ page.previous.id | replace: '/' , '-' | remove_first: '-' }}.png');">
 				</div>
 
 				<div class="content-preview">
-					<a href="{{page.previous.url}}"><h5>{{page.previous.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
+					<a href="{{page.previous.url}}"><h5>{{page.previous.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize | truncate: 30 }}</h5></a>
 					<small>{{ page.previous.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
 						<p>{{ page.previous.content | strip_html | truncate: 180 }}</p>
@@ -53,12 +54,12 @@ title: "none"
 			    {% if page.next.url %}
     			
 			<div class="post-preview" style="flex-direction: column;">
-				<p> Next Post</p>
+				<a href="{{page.next.url}}"><h5> Next Post</h5></a>
 				<div class="image-preview" style="background-image: url('/images/{{ page.next.id | replace: '/' , '-' | remove_first: '-' }}.png');">
 				</div>
 
 				<div class="content-preview">
-					<a href="{{page.next.url}}"><h5>{{page.next.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5></a>
+					<a href="{{page.next.url}}"><h5>{{page.next.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize | truncate: 30 }}</h5></a>
 					<small>{{ page.next.date | date: "%-d %B %Y" }}</small>
 					<div class="text-preview">
 						<p>{{ page.next.content | strip_html | truncate: 180 }}</p>
