--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ h4{
 h5{
 	font-size: 1.333em;
 	padding: 1em 0 0.5em 0;
+	line-height: 1.25em;
 }
 
 p{
@@ -144,6 +145,7 @@ a:visited{
 
 .post-title small{
 	padding: 1.5em 0 1em 0;
+	min-width: 120px;
 }
 
 .post-head-image{
@@ -298,6 +300,12 @@ a:visited{
 .neighbour-posts h5{
 	padding: 0.5em 0 0.5em 0;
 }
+
+.foot{
+	min-height: 600px;
+	background-color: lightgrey;
+}
+
 @media(max-width: 660px){
 
 	.hamburger-icon{
