--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ title: "none"
 			    {% if page.previous.url %}
 			   
 			<div class="post-preview" style="flex-direction: column;">
-				<a href="{{page.previous.url}}"><h5> Previous Post</h5></a>
+				<a href="{{page.previous.url}}"><h5>◀◀◀ Previous Post</h5></a>
 				<div class="image-preview" style="background-image: url('/images/{{ page.previous.id | replace: '/' , '-' | remove_first: '-' }}.png');">
 				</div>
 
@@ -54,7 +54,7 @@ title: "none"
 			    {% if page.next.url %}
     			
 			<div class="post-preview" style="flex-direction: column;">
-				<a href="{{page.next.url}}"><h5> Next Post</h5></a>
+				<a style="text-align: right;" href="{{page.next.url}}"><h5>Next Post ►►►</h5></a>
 				<div class="image-preview" style="background-image: url('/images/{{ page.next.id | replace: '/' , '-' | remove_first: '-' }}.png');">
 				</div>
 
