--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,40 @@ body{
 	color: #292929;
 	min-height: 100vh;
 	background-color: black;
+	background-image: url('snow1.png'), url('snow1.png'), url('snow1.png');
+	-webkit-animation: snow 20s linear infinite;
+
+	-webkit-animation: snow 20s linear infinite;
+ 	-moz-animation: snow 20s linear infinite;
+ 	-ms-animation: snow 20s linear infinite;
+ 	animation: snow 20s linear infinite;
+}
+
+/*snow keyframes*/
+@-webkit-keyframes snow {
+ 0% {background-position: 0px 0px;}
+ 100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+
+@keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+ 100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+ 
+@-moz-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+ 
+@-webkit-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+ 50% {background-color:#b4cfe0;}
+ 100% {background-position: 500px 1000px, 400px 400px, 300px 300px; background-color:#6b92b9;}
+}
+ 
+@-ms-keyframes snow {
+0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+ 100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
 }
 
 h1{
@@ -97,9 +131,9 @@ a:visited{
 
 
 .center-col{
-	max-width: 660px;
+	max-width: 720px;
 	margin: auto;
-	padding:0 20px;
+	/*padding:0 20px;*/
 	background-color: white;
 }
 
@@ -129,6 +163,7 @@ a:visited{
 
 .navbar a{
 	padding: 0 1em;
+	color: white;
 }
 
 .navbar body{
@@ -140,7 +175,7 @@ a:visited{
 }
 
 #main{
-	min-height: 100vh;s
+	min-height: 100vh;
 }
 
 .post-title{
@@ -149,10 +184,11 @@ a:visited{
 	justify-content: space-between;
 	align-items: center;
 	min-height: 60px;
+	padding: 2em 3em;
 }
 
 .post-text{
-	padding-bottom: 3em;
+	padding: 0 3em;
 }
 
 .post-title small{
@@ -318,8 +354,8 @@ a:visited{
 }
 
 .foot{
-	min-height: 600px;
-	background-color: lightgrey;
+	/*min-height: 600px;*/
+	/*background-color: lightgrey;*/
 }
 
 @media(max-width: 660px){
