--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body{
 	color: #292929;
 	min-height: 100vh;
 	background-color: black;
-	background-image: url('snow1.png'), url('snow1.png'), url('snow1.png');
+	background-image: url('/images/snow3.png'), url('/images/snow2.png'), url('/images/snow1.png');
 	-webkit-animation: snow 20s linear infinite;
 
 	-webkit-animation: snow 20s linear infinite;
@@ -67,23 +67,23 @@ body{
 /*snow keyframes*/
 @-webkit-keyframes snow {
  0% {background-position: 0px 0px;}
- 100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+ 100% {background-position: -300px 300px, -200px 200px, -100px 100px;}
 }
 
 @keyframes snow {
 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
- 100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+ 100% {background-position: -300px 300px, -200px 200px, -100px 100px;}
 }
  
 @-moz-keyframes snow {
 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+100% {background-position: -300px 300px, -200px 200px, -100px 100px;}
 }
  
 @-webkit-keyframes snow {
 0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
  50% {background-color:#b4cfe0;}
- 100% {background-position: 500px 1000px, 400px 400px, 300px 300px; background-color:#6b92b9;}
+ 100% {background-position: -300px 300px, -200px 200px, -100px 100px;}
 }
  
 @-ms-keyframes snow {
