--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ a:visited{
 	align-items: center;
 	height: 60px;
 	margin:auto;
-	background-color: black;
+	background-color: transparent;
 	padding:0 20px;
 }
 
@@ -210,7 +210,7 @@ a:visited{
 }
 
 .post-list{
-	padding-top: 2em;
+	/*padding-top: 2em;*/
 }
 
 .post-list li{
@@ -358,7 +358,7 @@ a:visited{
 }
 
 .foot{
-	/*min-height: 600px;*/
+	min-height: 60px;
 	/*background-color: lightgrey;*/
 }
 
