--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ a:visited{
 }
 
 .post-list li{
-	padding-bottom: 3em;
+	padding: 1em;
 }
 
 .post-preview{
@@ -333,7 +333,7 @@ a:visited{
 }
 
 .subscription-box{
-	padding: 1em 1em;
+	padding: 1em 3em;
 }
 
 .neighbour-posts{
@@ -371,7 +371,7 @@ a:visited{
 	.post-title{
 		flex-direction: column;
 		align-items: flex-start;
-		padding: 2em 1em;
+		padding: 1em 1em;
 	}
 
 	.post-text{
@@ -394,6 +394,9 @@ a:visited{
 		padding: 1em 0 0.5em 0;
 	}
 
+	.subscription-box{
+		padding: 1em;
+	}
 
 	.no-mobile a{
 		display: none !important;
