--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,9 @@ title: "none"
 
 
 <div class="subscription-box center-col flex-all">
-	mailchimp
+	<div class="sub-inner">
+		mailchimp
+	</div>
 </div>
 
 <div class="neighbour-posts center-col flex-all">
