too many commas

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 title: "none"
 ---
 <div class="post-head center-col flex-all">
-	<div class="post-head-image" style="background-image: url(''/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png');">
+	<div class="post-head-image" style="background-image: url(/images/{{ page.url | replace: '/' , '-' | remove_first: '-' | remove: '.html' }}.png');">
 	</div>
 	<div class="post-title">
 		<h5 class="flex-left">{{page.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize }}</h5>
