--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
 
 
   <body>
- 	<div id="whole-page" class="snow">
+ 	<div id="whole-page">
+
+ 		<div class="snow">
 
   	  {% include nav.html %}
  
