--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,12 @@ a:visited{
 }
 
 .snow{
+	width: 100vh;
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	z-index: -1;
+
 	background-image: url('/images/snow3.png'), url('/images/snow2.png'), url('/images/snow1.png');
 	-webkit-animation: snow 20s linear infinite;
 
@@ -136,8 +142,8 @@ a:visited{
  	-ms-animation: snow 20s linear infinite;
  	animation: snow 20s linear infinite;
 
- 	  -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-  mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+ 	-webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+	mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
 }
 
 
