--- a/css/main.css
+++ b/css/main.css
@@ -128,8 +128,8 @@ a:visited{
 }
 
 .snow{
-	width: 100vh;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	top: 0;
 	z-index: -1;
@@ -383,7 +383,8 @@ a:visited{
 }
 
 .foot{
-	min-height: 60px;
+	padding:2em 0;
+	justify-content:center;
 	/*background-color: lightgrey;*/
 }
 
