--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize | prepend: "Winter Solace - " }}{% else %}Winter Solace{% endif %}</title>
+ 
+  <title>{page.id}
+  	
+
+  </title>
+
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href=/css/main.css>
