--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,9 @@
 
  
 	<title>
-		{% if page.url == "/index.html" %}
   		Winter Solace
-  		{% endif %}
-  		{% if page.title %}{{ page.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize | prepend: " - " }}
+  		{% if page.title %}
+  		{{ page.id | slice: 12, 100  | replace: '-'  , ' ' | capitalize | prepend: " - " }}
   		{% endif %}
 	</title>
 
