--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,10 @@ a:visited{
 	padding-bottom: 3em;
 }
 
+.post-text img{
+	width: 100%;
+}
+
 .post-text p{
 	padding:0.5em 3em;
 }
@@ -217,6 +221,7 @@ a:visited{
 	padding: 1.5em 0 1em 1em;
 	min-width: 120px;
 }
+
 
 .post-head-image{
 	width: 100%;
