--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,7 @@
 
  
 	<title>
-  		Winter Solace
-  		{% if page.title %}
-  		{{ page.path | remove: '.html' }}
-  		{% endif %}
+{page.title}
 	</title>
 
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
