--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
  
 	<title>
-{page.title}
+	{{page.title}}
 	</title>
 
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
