--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
  
-	<title>
-	{{page.title}}
-	</title>
+	<title>	{{page.title}} 	</title>
 
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
