--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ a:visited{
 	height: 100%;
 	position: absolute;
 	top: 0;
-	z-index: -1;
+	z-index: -10;
 
 	background-image: url('/images/snow3.png'), url('/images/snow2.png'), url('/images/snow1.png');
 	-webkit-animation: snow 20s linear infinite;
@@ -144,6 +144,15 @@ a:visited{
 
  	-webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
 	mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+}
+
+.hero-front{
+	position: absolute;
+	top: 0;
+	width: 100%
+	height: 100%;
+	background-image: url('/images/hero-front');
+	z-index: -5;
 }
 
 
