--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,11 @@ a:visited{
 .hero-front{
 	position: absolute;
 	top: 0;
-	width: 100%
-	height: 100%;
-	background-image: url('/images/hero-front');
+	width: 100%;
+	height: 900px;
+	background-image: url('/images/hero-front.png');
+	background-repeat: no-repeat;
+	background-position: center;
 	z-index: -5;
 }
 
