--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,7 @@ a:visited{
 .bar1, .bar2, .bar3 {
   width: 30px;
   height: 3px;
-  background-color: #9d3259;
+  background-color: white;
   margin: 4px 0;
   transition: 0.2s;
 }
@@ -367,6 +367,7 @@ a:visited{
 
 #mobile-nav a{
 	padding: 1em;
+	color: black;
 }
 
 
