--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ a:visited{
 }
 
 .hero-back-image{
-	background-image: url('/images/hero-front.png');
+	background-image: url('/images/hero-back.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: grey;
