--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ a:visited{
 	width: 100%;
 	height: 900px;
 	position: absolute;
-	top: 0;
+	top: 40px;
 	z-index: -10;
 
 	background-image: url('/images/snow3.png'), url('/images/snow2.png'), url('/images/snow1.png');
@@ -148,7 +148,7 @@ a:visited{
 
 .hero-front{
 	position: absolute;
-	top: 0;
+	top: 40px;
 	width: 100%;
 	height: 900px;
 	display: flex;
@@ -475,6 +475,22 @@ a:visited{
 
 	.image-preview, .post-head-image{
 		flex: 0 0 156px;
+	}
+
+	.snow{
+		height: 450px;
+	}
+
+	.hero-front{
+		height: 450px;
+	}
+
+	.hero-front-image{
+		flex:0 1 750px;
+	}
+
+	.hero-back-image{
+		flex:0 1 750px;
 	}
 
 }
