--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,7 @@ a:visited{
 	background-image: url('/images/hero-front.png');
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: cover;
 	flex:0 1 1500px;
 }
 
@@ -166,7 +167,7 @@ a:visited{
 	background-image: url('/images/hero-back.png');
 	background-repeat: no-repeat;
 	background-position: center;
-	background-color: grey;
+	background-size: cover;
 	flex:0 1 1500px;
 }
 
@@ -325,6 +326,10 @@ a:visited{
   background-color: white;
   margin: 4px 0;
   transition: 0.2s;
+}
+
+.change{
+	  background-color: black;
 }
 
 .change .bar1 {
