--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ a:visited{
 
 .frontpage-content{
 	margin-top:720px;
-	background-color: black;
+	background-color: transparent;
 	padding: 0 20px;
 }
 
