--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,10 +12,19 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 	<!-- facebook tags -->
-	<meta property="og:url"                content="https://wintersolacegame.com{{ page.url }}" />
-	
-	<meta property="og:title"              content="Winter Solace" />
-	<meta property="og:description"        content="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
-	<meta property="og:image"              content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:url" content="https://wintersolacegame.com{{ page.url }}" />
+	<meta property="og:title" content="Winter Solace" />
+	<meta property="og:description" content="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war." />
+	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:image:width" content="1500">
+	<meta property="og:image:height" content="900">
 
+	<!-- twitter meta -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Winter Solace">
+	<meta name="twitter:site" content="@baronblackmore">
+	<meta name="twitter:description" content="An action-adventure RPG where you are a vampire wizard, trying to make friends during a civil war.">
+	<meta name="twitter:image" content="http://www.wintersolacegame.com/images/social.png">
+	<meta name="twitter:image:width" content="1500">
+	<meta name="twitter:image:height" content="900">
 </head>
