--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
 
 	<!-- facebook tags -->
 	<meta property="og:url" content="https://wintersolacegame.com{{ page.url }}" />
+	<meta property="og:image" content="http://www.wintersolacegame.com/images/social.png" />
+	<meta property="og:image:width" content="1500">
+	<meta property="og:image:height" content="900">
 
 	<!-- twitter meta -->
 	<meta name="twitter:card" content="summary_large_image">
