temp front page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta description="Winter Solace is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.">
-	<meta keywords="Indie, RPG, Game, Game Design, Pixel Art">
+	<meta keywords="Indie, RPG, Game, Game Design, Pixel Art, New RPG Game, Undertale Game">
 	<meta author="Sam Ballard">
 
 	<title>	{{page.title}} 	</title>
