little more edit

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar center-col">
+<div id="nav" class="navbar center-col">
 	<div class="flex-left">
 		<a href="https://wintersolacegame.com" style="padding-left: 0">Winter Solace</a>
 	</div>
